working thru bdd and tdd combined to consume the best_buy api

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,6 +19,12 @@
       <li>
         <a href="/orders">Orders</a>
       </li>
+      <li>
+        <%= form_tag(search_path, method: :get) do %>
+        <%= text_field_tag :zip_code %>
+        <%= submit_tag 'Search' %>
+        <% end %>
+      </li>
     </ul>
   </div>
 </nav>
