--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Best Buy Stores</h1>
 <p><%= @stores.all['total'] %> Total Stores</p>
 <ul>
-  <% @stores.all['stores'].each do |store| %>
-  <li><%= store['longName'] %></li>
-  <p><%= store['city'] %></p>
+  <% @stores.all['stores'].each_with_index do |store, index| %>
+    <li class="store-<%= index %>-name"><%= store['longName'] %></li>
+    <p class="store-<%= index %>-city"><%= store['city'] %></p>
+    <p class="store-<%= index %>-distance"><%= store['distance'] %></p>
+    <p class="store-<%= index %>-phone">><%= store['phone'] %></p>
+    <p class="store-<%= index %>-type">><%= store['storeType'] %></p>
   <% end %>
 </ul>
