refix of mistakes I think.  Switched calling BestBuyStore.stores to self instantiate call the service model that connects with the api collect the data and then return the data back and map over each of those calling on itself each time before returning back to the view to be called on as methods.  This isn't tested but i've browser tested it and know that it works.

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Best Buy Stores</h1>
-<p><%= @stores.all['total'] %> Total Stores</p>
+<p><%= @stores.firste.total %> Total Stores</p>
 <ul>
-  <% @stores.all['stores'].each_with_index do |store, index| %>
-    <li class="store-<%= index %>-name"><%= store['longName'] %></li>
-    <p class="store-<%= index %>-city"><%= store['city'] %></p>
-    <p class="store-<%= index %>-distance"><%= store['distance'] %></p>
-    <p class="store-<%= index %>-phone">><%= store['phone'] %></p>
-    <p class="store-<%= index %>-type">><%= store['storeType'] %></p>
+  <% @stores.each_with_index do |store, index| %>
+    <li class="store-<%= index %>-name"><%= store.longname %></li>
+    <p class="store-<%= index %>-city"><%= store.city %></p>
+    <p class="store-<%= index %>-distance"><%= store.distance %></p>
+    <p class="store-<%= index %>-phone">><%= store.phone %></p>
+    <p class="store-<%= index %>-type">><%= store.store_type %></p>
   <% end %>
 </ul>
